<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/ic_flowers"
        android:contentDescription="@string/cvice"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kreiraj_novog_korisnika"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewUsername"
        android:inputType="text"
        android:hint="@string/korisnicko_ime"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewPassword"
        android:inputType="textPassword"
        android:hint="@string/lozinka"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewPasswordConfirm"
        android:inputType="textPassword"
        android:hint="@string/ponovljena_lozinka"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kreiraj"
        android:paddingHorizontal="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:enabled="false"/>

</LinearLayout>