<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="50dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_flowers"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/cvice"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prijavi_se"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginVertical="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:inputType="textNoSuggestions"
        android:hint="@string/korisnicko_ime"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:enabled="false"
        android:text="@string/prijavi_se"
        android:layout_gravity="center"
        android:paddingHorizontal="80dp"
        android:layout_marginTop="40dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNewUser"
        android:enabled="true"
        android:text="@string/novi_korisnik"
        android:layout_gravity="center"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="20dp" />

</LinearLayout>