<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:padding="50dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stanje_skladista"
        android:drawableStart="@drawable/ic_warehouse"
        android:id="@+id/btnStanjeSkladista"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unos_artikala"
        android:drawableStart="@drawable/ic_flower"
        android:id="@+id/btnUnosArtikala"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kupci_i_narudzbe"
        android:drawableStart="@drawable/ic_shopping_cart"
        android:id="@+id/btnKupciNarudzbe"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/korisnicke_postavke"
        android:drawableStart="@drawable/ic_settings"
        android:id="@+id/btnKorisnickePostavke"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>




</LinearLayout>