<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivFlower"
            android:src="@drawable/ic_flowers"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naziv"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ruža"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupa"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvGrupa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ruže"
            android:textSize="22sp"
            android:textColor="@color/black"/>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boja"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvBoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ruže"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNaSkladistuLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Na skladištu: "
                android:textSize="20sp"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/tvNaSkladistu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="165"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/tvNaSkladistuLbl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Za narudžbe: "
                android:textSize="20sp"
                android:textColor="@color/gray"
                android:gravity="end"
                android:layout_toStartOf="@id/tvNarudzbe"/>

            <TextView
                android:id="@+id/tvNarudzbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Za prodaju"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jedinicna_kolicina"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvJedKolicina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/količina_u_pakiranju"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tvPakiranjeKol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="60"
            android:textSize="22sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>